--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 													By: Adam Hundt
 											</p>
 									</div>
-									<h3>I recently read 4 novels by Philip Roth: Portnoy's Complaint, Indignation, Everyman, and The Humbling.</h3>
+									<h3>I recently read 6 novels by Philip Roth. This is a commentary on Roth's final 4 novels compared to his early classics Portnoy's Complaint and Goodbye, Columbus.</h3>
 									<div>
 											<img src="images/book.jpg">
 											<p>Category: Literature. By: Adam Hundt.
